fix: resume render on mobile

--- a/assets/css/pdf.css
+++ b/assets/css/pdf.css
@@ -11,7 +11,7 @@
 }
 
 .download-button a {
-    background-color: #007bff; /* Bootstrap primary blue */
+    background-color: #06038D; /* Bootstrap primary blue */
     color: white;
     padding: 12px 24px;
     text-decoration: none;
